# Faker-OpenAI

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tmp.py
faker_openai/: __init__.py  _chat_message.py  _chat_request.py  _chat_response.py  _id.py  _utils.py
