[tool.poetry]
authors = ["Allen Chou <f1470891079@gmail.com>"]
description = ""
license = "MIT"
name = "faker-openai"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
faker = "*"
python = "^3.10"
typing-extensions = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
openai = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-xdist = "*"
python-dotenv = "*"
setuptools = "*"


[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
